# rust-sel4

./: .gitignore  Cargo.nix  Cargo.toml  LICENSE  Makefile  README.md  default.nix  rust-toolchain.toml  rustfmt.toml
crates/capdl-initializer/with-embedded-spec/: Cargo.toml
crates/capdl/embed-spec/: Cargo.toml
crates/capdl/embedded-spec/: Cargo.toml  build.rs
crates/capdl/types/: Cargo.toml
crates/docs/root/: Cargo.toml
crates/drivers/meson/: Cargo.toml
crates/examples/full-runtime/: Cargo.toml
crates/examples/minimal-runtime-with-state/: Cargo.toml
crates/examples/minimal-runtime-without-state/: Cargo.toml
crates/loader/: Cargo.toml  build.rs
crates/loader/add-payload/: Cargo.toml
crates/loader/build-env/: Cargo.toml
crates/loader/config/: Cargo.toml
crates/loader/config-types/: Cargo.toml
crates/loader/core/: Cargo.toml  build.rs
crates/loader/embed-aarch64-translation-tables/: Cargo.toml
crates/loader/embed-page-tables/: Cargo.toml
crates/loader/expecting-appended-payload/: Cargo.toml  build.rs
crates/loader/payload/: Cargo.toml  build.rs
crates/loader/payload-types/: Cargo.toml
crates/loader/sanity-check/: Cargo.toml
crates/loader/src/: copy_payload_data.rs  enter_kernel.rs  exception_handler.rs  main.rs  run.rs  sanity_check.rs  smp.rs  this_image.rs
crates/loader/types/: Cargo.toml
crates/meta/: Cargo.toml
crates/meta/for-docs/: Cargo.toml
crates/meta/src/: lib.rs
crates/sel4/: Cargo.nix  Cargo.toml  sel4.README
crates/sel4-capdl-initializer/: Cargo.nix  Cargo.toml  README.md  build.rs
crates/sel4-capdl-initializer/add-spec/: Cargo.nix  Cargo.toml
crates/sel4-capdl-initializer/core/: Cargo.nix  Cargo.toml
crates/sel4-capdl-initializer/embed-spec/: Cargo.nix  Cargo.toml
crates/sel4-capdl-initializer/src/: cslot_allocator.rs  error.rs  hold_slots.rs  initialize.rs  lib.rs  lib_main.rs  main.rs  memory.rs  no_allocator.rs
crates/sel4-capdl-initializer/types/: Cargo.nix  Cargo.toml
crates/sel4-capdl-initializer/with-embedded-spec/: Cargo.nix  Cargo.toml  build.rs
crates/sel4-dlmalloc/: Cargo.nix  Cargo.toml
crates/sel4-dlmalloc/src/: lib.rs
crates/sel4-externally-shared/: Cargo.nix  Cargo.toml  sel4-externally-shared.LICENSE-MIT  sel4-externally-shared.README  sel4-shared.README
crates/sel4-externally-shared/src/: access.rs  externally_shared_ref.rs  lib.rs  volatile_ref.rs
crates/sel4-generate-target-specs/: Cargo.nix  Cargo.toml  build.rs
crates/sel4-generate-target-specs/src/: main.rs  resettable.lds
crates/sel4-kernel-loader/: Cargo.nix  Cargo.toml  README.md  build.rs
crates/sel4-kernel-loader/add-payload/: Cargo.nix  Cargo.toml
crates/sel4-kernel-loader/config-types/: Cargo.toml
crates/sel4-kernel-loader/embed-page-tables/: Cargo.nix  Cargo.toml
crates/sel4-kernel-loader/payload-types/: Cargo.nix  Cargo.toml
crates/sel4-kernel-loader/src/: barrier.rs  copy_payload_data.rs  enter_kernel.rs  fmt.rs  init_memory.rs  logging.rs  main.rs  rt.rs  run.rs  sanity_check.rs  smp.rs  this_image.rs
crates/sel4-loader/: Cargo.toml  README.md  build.rs
crates/sel4-loader/add-payload/: Cargo.toml
crates/sel4-loader/config-types/: Cargo.toml
crates/sel4-loader/embed-page-tables/: Cargo.toml
crates/sel4-loader/payload-types/: Cargo.toml
crates/sel4-loader/src/: copy_payload_data.rs  enter_kernel.rs  logging.rs  run.rs  sanity_check.rs  smp.rs  this_image.rs
crates/sel4-microkit/: Cargo.nix  Cargo.toml
crates/sel4-microkit/base/: Cargo.nix  Cargo.toml
crates/sel4-microkit/driver-adapters/: Cargo.nix  Cargo.toml
crates/sel4-microkit/embedded-hal-adapters/: Cargo.nix  Cargo.toml
crates/sel4-microkit/macros/: Cargo.toml
crates/sel4-microkit/message/: Cargo.nix  Cargo.toml
crates/sel4-microkit/simple-ipc/: Cargo.toml
crates/sel4-microkit/smoltcp-device-adapter/: Cargo.nix  Cargo.toml
crates/sel4-microkit/src/: cspace.rs  defer.rs  entry.rs  env.rs  handler.rs  heap.rs  ipc.rs  lib.rs  memory_region.rs  message.rs  panicking.rs  printing.rs  start.rs
crates/sel4-newlib/: Cargo.nix  Cargo.toml  build.rs
crates/sel4-newlib/src/: errno.rs  heap.rs  lib.rs
crates/sel4-render-elf-with-data/: Cargo.toml
crates/sel4-render-elf-with-data/src/: lib.rs  render.rs
crates/sel4-root-task/: Cargo.nix  Cargo.toml
crates/sel4-root-task/default-test-harness/: Cargo.nix  Cargo.toml
crates/sel4-root-task/macros/: Cargo.toml
crates/sel4-root-task/src/: entry.rs  heap.rs  lib.rs  printing.rs  termination.rs
crates/sel4-runtime-common/: Cargo.nix  Cargo.toml
crates/sel4-runtime-common/src/: abort.rs  ctors.rs  lib.rs  start.rs  static_heap.rs  tls.rs  unwinding.rs
crates/sel4/bitfield-ops/: Cargo.nix  Cargo.toml  build.rs
crates/sel4/bitfield-parser/: Cargo.nix  Cargo.toml  grammar.pest
crates/sel4/bitfield-types/: Cargo.toml
crates/sel4/build-env/: Cargo.nix  Cargo.toml
crates/sel4/config/: Cargo.nix  Cargo.toml  build.rs
crates/sel4/helper-macros/: Cargo.toml
crates/sel4cp/: Cargo.toml  build.rs
hacking/: .gitignore  Cargo.toml  Makefile
hacking/binary-cache/: Makefile  fragment.nix.conf
hacking/cache-maintenance/: Makefile
hacking/cargo-manifest-management/: .gitignore  Cargo.toml  Makefile  README.md  default.nix  direct-dependency-allow-list.toml  execute_plan.py  make-blueprint.nix  manifest-scope.nix  manual-manifests.nix  third-party-dependency-versions.toml  tool.nix  workspace.nix  x.nix
hacking/cargo-manifest-sources/: crate.nix
hacking/docker/: Dockerfile  Makefile  bashrc_extra  install-nix.sh  nix.conf  setup.sh
hacking/kani/: Makefile
hacking/mk/: common.mk  docs.mk
hacking/nix/: config-helpers.nix  default.nix  kernel.nix  shell.nix  tree-helpers.nix
hacking/scripts/: check-generic-formatting-helper.py  check-generic-formatting.sh  git-keep.sh
hacking/unstable-feature-monitoring/: Makefile  enumerate-crates-using-unstable-features.sh  enumerate-unstable-features-used.sh  enumerate-used-unstable-features.sh  extra-used-unstable-features.rs  notes.md
hacking/vscode/: .gitignore  Makefile  default-excludes.txt  rust-analyzer-wrapper
(+2334 files in other folders)
