[workspace]

resolver = "2"

members = [
    "crates/build-tools/sel4-render-elf-with-data",
    "crates/capdl/embed-spec",
    "crates/capdl/loader",
    "crates/capdl/loader/add-spec",
    "crates/capdl/loader/core",
    "crates/capdl/loader/types",
    "crates/capdl/loader/with-embedded-spec",
    "crates/capdl/loader/with-embedded-spec/build-env",
    "crates/capdl/loader/with-embedded-spec/embedded-spec",
    "crates/capdl/loader/with-embedded-spec/embedded-spec/validate",
    "crates/capdl/types",
    "crates/capdl/types/derive",
    "crates/examples/root-task/example-root-task-without-runtime",
    "crates/examples/root-task/example-root-task",
    "crates/examples/sel4cp/banscii/pds/artist",
    "crates/examples/sel4cp/banscii/pds/artist/interface-types",
    "crates/examples/sel4cp/banscii/pds/assistant",
    "crates/examples/sel4cp/banscii/pds/assistant/core",
    "crates/examples/sel4cp/banscii/pds/assistant/core/test",
    "crates/examples/sel4cp/banscii/pds/pl011-driver",
    "crates/examples/sel4cp/banscii/pds/pl011-driver/interface-types",
    "crates/examples/sel4cp/hello/pds/hello",
    "crates/meta",
    "crates/runtime/sel4-backtrace",
    "crates/runtime/sel4-backtrace/addr2line-context-helper",
    "crates/runtime/sel4-backtrace/cli/sel4-symbolize-backtrace",
    "crates/runtime/sel4-backtrace/embedded-debug-info",
    "crates/runtime/sel4-backtrace/embedded-debug-info/cli/sel4-embed-debug-info",
    "crates/runtime/sel4-backtrace/simple",
    "crates/runtime/sel4-backtrace/types",
    "crates/runtime/sel4-dlmalloc",
    "crates/runtime/sel4-immediate-sync-once-cell",
    "crates/runtime/sel4-logging",
    "crates/runtime/sel4-panicking",
    "crates/runtime/sel4-panicking/env",
    "crates/runtime/sel4-reserve-tls-on-stack",
    "crates/runtime/sel4-root-task-runtime",
    "crates/runtime/sel4-root-task-runtime/macros",
    "crates/runtime/sel4-runtime-phdrs",
    "crates/runtime/sel4-runtime-simple-entry",
    "crates/runtime/sel4-runtime-simple-static-heap",
    "crates/runtime/sel4-shared",
    "crates/runtime/sel4-sync",
    "crates/sel4-loader",
    "crates/sel4-loader/add-payload",
    "crates/sel4-loader/config-types",
    "crates/sel4-loader/embed-page-tables",
    "crates/sel4-loader/payload-types",
    "crates/sel4",
    "crates/sel4/bitfield-parser",
    "crates/sel4/bitfield-parser/test",
    "crates/sel4/bitfield-types",
    "crates/sel4/build-env",
    "crates/sel4/config",
    "crates/sel4/config/data",
    "crates/sel4/config/generic/macro-impls",
    "crates/sel4/config/generic/types",
    "crates/sel4/config/macros",
    "crates/sel4/platform-info",
    "crates/sel4/platform-info/types",
    "crates/sel4/rustfmt-helper",
    "crates/sel4/sys",
    "crates/sel4/sys/wrappers",
    "crates/sel4cp",
    "crates/sel4cp/macros",
    "crates/sel4cp/postcard",
    "crates/simple-task/sel4-simple-task-config-types",
    "crates/simple-task/sel4-simple-task-rpc",
    "crates/simple-task/sel4-simple-task-runtime",
    "crates/simple-task/sel4-simple-task-runtime/config/cli/sel4-simple-task-serialize-runtime-config",
    "crates/simple-task/sel4-simple-task-runtime/config/types",
    "crates/simple-task/sel4-simple-task-runtime/macros",
    "crates/simple-task/sel4-simple-task-threading",
    "crates/support/cargo-helpers",
    "crates/support/generate-target-specs",
    "crates/tests/capdl/threads/components/test",
    "crates/tests/capdl/utcover/components/test",
    "crates/tests/root-task/backtrace",
    "crates/tests/root-task/c",
    "crates/tests/root-task/config",
    "crates/tests/root-task/core-libs",
    "crates/tests/root-task/loader",
    "crates/tests/root-task/panicking",
    "crates/tests/root-task/tls",
]
