[workspace]

resolver = "2"

members = [
    "crates/capdl/embed-spec",
    "crates/capdl/initializer",
    "crates/capdl/initializer/add-spec",
    "crates/capdl/initializer/core",
    "crates/capdl/initializer/with-embedded-spec",
    "crates/capdl/initializer/with-embedded-spec/build-env",
    "crates/capdl/initializer/with-embedded-spec/embedded-spec",
    "crates/capdl/initializer/with-embedded-spec/embedded-spec/validate",
    "crates/capdl/types",
    "crates/capdl/types/derive",
    "crates/examples/root-task/example-root-task",
    "crates/examples/root-task/example-root-task-without-runtime",
    "crates/examples/sel4cp/banscii/pds/artist",
    "crates/examples/sel4cp/banscii/pds/artist/interface-types",
    "crates/examples/sel4cp/banscii/pds/assistant",
    "crates/examples/sel4cp/banscii/pds/assistant/core",
    "crates/examples/sel4cp/banscii/pds/assistant/core/test",
    "crates/examples/sel4cp/banscii/pds/pl011-driver",
    "crates/examples/sel4cp/banscii/pds/pl011-driver/interface-types",
    "crates/examples/sel4cp/hello/pds/hello",
    "crates/private/meta",
    "crates/private/support/cargo-helpers",
    "crates/private/support/simple-task/sel4-simple-task-config-types",
    "crates/private/support/simple-task/sel4-simple-task-rpc",
    "crates/private/support/simple-task/sel4-simple-task-runtime",
    "crates/private/support/simple-task/sel4-simple-task-runtime/config/cli/sel4-simple-task-serialize-runtime-config",
    "crates/private/support/simple-task/sel4-simple-task-runtime/config/types",
    "crates/private/support/simple-task/sel4-simple-task-runtime/macros",
    "crates/private/support/simple-task/sel4-simple-task-threading",
    "crates/private/tests/capdl/threads/components/test",
    "crates/private/tests/capdl/utcover/components/test",
    "crates/private/tests/root-task/backtrace",
    "crates/private/tests/root-task/c",
    "crates/private/tests/root-task/config",
    "crates/private/tests/root-task/core-libs",
    "crates/private/tests/root-task/loader",
    "crates/private/tests/root-task/panicking",
    "crates/private/tests/root-task/tls",
    "crates/sel4",
    "crates/sel4-backtrace",
    "crates/sel4-backtrace/addr2line-context-helper",
    "crates/sel4-backtrace/cli/sel4-symbolize-backtrace",
    "crates/sel4-backtrace/embedded-debug-info",
    "crates/sel4-backtrace/embedded-debug-info/cli/sel4-embed-debug-info",
    "crates/sel4-backtrace/simple",
    "crates/sel4-backtrace/types",
    "crates/sel4-dlmalloc",
    "crates/sel4-externally-shared",
    "crates/sel4-generate-target-specs",
    "crates/sel4-immediate-sync-once-cell",
    "crates/sel4-kernel-loader",
    "crates/sel4-kernel-loader/add-payload",
    "crates/sel4-kernel-loader/config-types",
    "crates/sel4-kernel-loader/embed-page-tables",
    "crates/sel4-kernel-loader/payload-types",
    "crates/sel4-logging",
    "crates/sel4-panicking",
    "crates/sel4-panicking/env",
    "crates/sel4-platform-info",
    "crates/sel4-platform-info/types",
    "crates/sel4-render-elf-with-data",
    "crates/sel4-reserve-tls-on-stack",
    "crates/sel4-root-task",
    "crates/sel4-root-task/macros",
    "crates/sel4-runtime-common",
    "crates/sel4-rustfmt-helper",
    "crates/sel4-sync",
    "crates/sel4/bitfield-parser",
    "crates/sel4/bitfield-parser/test",
    "crates/sel4/bitfield-types",
    "crates/sel4/build-env",
    "crates/sel4/config",
    "crates/sel4/config/data",
    "crates/sel4/config/generic/macro-impls",
    "crates/sel4/config/generic/types",
    "crates/sel4/config/macros",
    "crates/sel4/sys",
    "crates/sel4/sys/wrappers",
    "crates/sel4cp",
    "crates/sel4cp/macros",
    "crates/sel4cp/postcard",
]
