[package]
name = "loader"
version = "0.1.0"
authors = ["Nick Spinale <nick.spinale@coliasgroup.com>"]
edition = "2021"
license = "BSD-2-Clause"

[dependencies]
heapless = { version = "0.7.16", features = ["serde"] }
loader-core = { path = "./core" }
loader-types = { path = "./types", features = ["serde"] }
log = "0.4.17"
postcard = { version = "1.0.2", default-features = false, features = [] }

[build-dependencies]
loader-embed-aarch64-translation-tables = { path = "./embed-aarch64-translation-tables" }
loader-types = { path = "./types" }
object = "0.30.3"
postcard = { version = "1.0.2", default-features = false, features = ["alloc"] }
quote = "1.0.23"
sel4-build-env = { path = "../sel4/build-env" }
sel4-config = { path = "../sel4/config" }
sel4-platform-info = { path = "../sel4/platform-info" }
sel4-rustfmt-helper = { path = "../sel4/rustfmt-helper" }
