[package]
name = "meta"
version = "0.1.0"
authors = ["Nick Spinale <nick.spinale@coliasgroup.com>"]
edition = "2021"
license = "BSD-2-Clause"

[features]
capdl-spec = ["root-task", "capdl-loader-with-embedded-spec", "capdl-embedded-spec"]
root-task = [
    "sel4-root-task-runtime",
    "capdl-loader-expecting-serialized-spec",
    "capdl-loader-core"
]
sel4cp = ["dep:sel4cp", "sel4cp-postcard"]

[dependencies]
cfg-if = "*"
log = "*"

[target."cfg(all(target_env = \"sel4\", not(target_arch = \"x86_64\")))".dependencies]
sel4-platform-info = { path = "../sel4/platform-info" }

[target."cfg(all(target_env = \"sel4\", target_arch = \"aarch64\"))".dependencies]
capdl-embedded-spec = { path = "../capdl/embedded-spec", features = ["deflate"], optional = true }
capdl-loader-core = { path = "../capdl/loader/core", optional = true }

[target."cfg(all(target_env = \"sel4\", target_arch = \"aarch64\"))".dependencies.capdl-loader-expecting-serialized-spec]
path = "../capdl/loader/expecting-serialized-spec"
artifact = ["bin"]
optional = true

[target."cfg(all(target_env = \"sel4\", target_arch = \"aarch64\"))".dependencies.capdl-loader-with-embedded-spec]
path = "../capdl/loader/with-embedded-spec"
artifact = ["bin"]
features = ["deflate"]
optional = true

[target."cfg(all(target_os = \"none\", not(target_env = \"sel4\")))".dependencies]
loader-core = { path = "../loader/core" }

[target."cfg(not(target_os = \"none\"))".dependencies]
render-elf-with-data = { path = "../build-tools/render-elf-with-data" }

[target."cfg(not(target_os = \"none\"))".dependencies.capdl-add-spec-to-loader]
path = "../capdl/loader/expecting-serialized-spec/cli/capdl-add-spec-to-loader"
artifact = ["bin"]

[target."cfg(not(target_os = \"none\"))".dependencies.sel4-embed-debug-info]
path = "../runtime/sel4-backtrace/embedded-debug-info/cli/sel4-embed-debug-info"
artifact = ["bin"]

[target."cfg(not(target_os = \"none\"))".dependencies.sel4-symbolize-backtrace]
path = "../runtime/sel4-backtrace/cli/sel4-symbolize-backtrace"
artifact = ["bin"]

[target."cfg(target_env = \"sel4\")".dependencies]
sel4 = { path = "../sel4" }
sel4-backtrace = { path = "../runtime/sel4-backtrace", features = ["full"] }
sel4-backtrace-embedded-debug-info = { path = "../runtime/sel4-backtrace/embedded-debug-info" }
sel4-backtrace-simple = { path = "../runtime/sel4-backtrace/simple", features = ["alloc"] }
sel4-backtrace-types = { path = "../runtime/sel4-backtrace/types", features = ["full"] }
sel4-config = { path = "../sel4/config" }
sel4-logging = { path = "../runtime/sel4-logging" }
sel4-sync = { path = "../runtime/sel4-sync" }
sel4-sys = { path = "../sel4/sys" }
sel4cp = { path = "../sel4cp", features = ["full"], optional = true }
sel4cp-postcard = { path = "../sel4cp/postcard", optional = true }

[target."cfg(target_env = \"sel4\")".dependencies.sel4-root-task-runtime]
path = "../runtime/sel4-root-task-runtime"
features = ["full"]
optional = true
