#
# Copyright 2023, Colias Group, LLC
#
# SPDX-License-Identifier: BSD-2-Clause
#

[package]
name = "sel4-externally-shared"
version = "0.1.0"
authors = ["Nick Spinale <nick.spinale@coliasgroup.com>"]
edition = "2021"
license = "BSD-2-Clause"

[features]
unstable = ["volatile/unstable"]
very_unstable = ["volatile/very_unstable"]

[dependencies]
zerocopy = "0.7.6"

[dependencies.volatile]
git = "https://github.com/coliasgroup/volatile.git"
tag = "keep/8aee5539716d3d38247f46eddd42b382"
