[package]
name = "sel4-kernel-loader"
version = "0.1.0"
authors = ["Nick Spinale <nick.spinale@coliasgroup.com>"]
edition = "2021"
license = "BSD-2-Clause"

[dependencies]
aarch64-cpu = "9.0.0"
cfg-if = "1.0.0"
heapless = { version = "0.7.16", features = ["serde"] }
log = "0.4.17"
postcard = { version = "1.0.2", default-features = false }
psci = { version = "0.1.1", default-features = false }
sel4-config = { path = "../sel4/config" }
sel4-kernel-loader-payload-types = { path = "./payload-types", features = ["serde"] }
sel4-logging = { path = "../sel4-logging" }
sel4-platform-info = { path = "../sel4-platform-info" }
spin = "0.9.4"
tock-registers = "0.8.1"

[build-dependencies]
cc = "1.0.76"
glob = "0.3.0"
object = "0.31.0"
postcard = { version = "1.0.2", default-features = false, features = ["alloc"] }
quote = "1.0.23"
sel4-build-env = { path = "../sel4/build-env" }
sel4-config = { path = "../sel4/config" }
sel4-kernel-loader-config-types = { path = "./config-types" }
sel4-kernel-loader-embed-page-tables = { path = "./embed-page-tables" }
sel4-kernel-loader-payload-types = { path = "./payload-types" }
sel4-platform-info = { path = "../sel4-platform-info" }
sel4-rustfmt-helper = { path = "../sel4-rustfmt-helper" }
serde = "1.0.147"
serde_yaml = "0.9.14"

[target."cfg(any(target_arch = \"riscv32\", target_arch = \"riscv64\"))".dependencies]
riscv = "0.10.0"
sbi = "0.2.0"
