#
# Copyright 2023, Colias Group, LLC
#
# SPDX-License-Identifier: BSD-2-Clause
#

[package]
name = "sel4-render-elf-with-data"
version = "0.1.0"
authors = ["Nick Spinale <nick.spinale@coliasgroup.com>"]
edition = "2021"
license = "BSD-2-Clause"

[dependencies]
anyhow = "1.0.66"
fallible-iterator = "0.2.0"
num = "0.4.1"
object = { version = "0.32.1", features = ["all"] }
