[package]
name = "sel4-root-task"
version = "0.1.0"
authors = ["Nick Spinale <nick.spinale@coliasgroup.com>"]
edition = "2021"
license = "BSD-2-Clause"

[features]
alloc = ["sel4-panicking/alloc"]
default = ["unwinding"]
full = ["default", "alloc"]
single-threaded = ["sel4/single-threaded"]
unwinding = ["sel4-panicking/unwinding"]

[dependencies]
sel4 = { path = "../sel4" }
sel4-panicking = { path = "../sel4-panicking" }
sel4-panicking-env = { path = "../sel4-panicking/env" }
sel4-root-task-macros = { path = "./macros" }

[dependencies.sel4-runtime-common]
path = "../sel4-runtime-common"
features = ["tls", "unwinding", "start", "static-heap"]
