#
# Copyright 2023, Colias Group, LLC
#
# SPDX-License-Identifier: BSD-2-Clause
#

[package]
name = "sel4-runtime-common"
version = "0.1.0"
authors = ["Nick Spinale <nick.spinale@coliasgroup.com>"]
edition = "2021"
license = "BSD-2-Clause"

[features]
start = []
static-heap = ["sel4-sync", "sel4-dlmalloc"]
tls = ["dep:sel4-initialize-tls-on-stack"]

[dependencies]
cfg-if = "1.0.0"
sel4-dlmalloc = { path = "../sel4-dlmalloc", optional = true }
sel4-initialize-tls-on-stack = { path = "../sel4-initialize-tls-on-stack", optional = true }
sel4-sync = { path = "../sel4-sync", optional = true }

[dependencies.unwinding]
version = "0.1.6"
default-features = false
features = ["unwinder", "fde-custom", "hide-trace"]
optional = true
