#
# Copyright 2023, Colias Group, LLC
#
# SPDX-License-Identifier: BSD-2-Clause
#

[package]
name = "sel4"
version = "0.1.0"
authors = ["Nick Spinale <nick.spinale@coliasgroup.com>"]
edition = "2021"
license = "MIT"

[features]
default = ["state"]
single-threaded = []
state = []

[dependencies]
cfg-if = "1.0.0"
sel4-config = { path = "./config" }
sel4-sys = { path = "./sys" }
