[package]
name = "sel4cp"
version = "0.1.0"
authors = ["Nick Spinale <nick.spinale@coliasgroup.com>"]
edition = "2021"
license = "BSD-2-Clause"

[features]
alloc = ["zerocopy/alloc", "sel4-panicking/alloc"]
default = ["unwinding"]
full = ["default", "alloc"]
unwinding = ["sel4-panicking/unwinding"]

[dependencies]
cfg-if = "1.0.0"
num_enum = { version = "0.5.9", default-features = false }
sel4 = { path = "../sel4", features = ["single-threaded"] }
sel4-immediate-sync-once-cell = { path = "../sel4-immediate-sync-once-cell" }
sel4-panicking = { path = "../sel4-panicking" }
sel4-panicking-env = { path = "../sel4-panicking/env" }
sel4-runtime-simple-entry = { path = "../sel4-runtime-simple-entry" }
sel4-runtime-simple-static-heap = { path = "../sel4-runtime-simple-static-heap" }
sel4-shared = { path = "../sel4-shared", features = ["unstable"] }
sel4cp-macros = { path = "./macros" }
zerocopy = "0.6.1"

[dependencies.sel4-runtime-phdrs]
path = "../sel4-runtime-phdrs"
features = ["unwinding", "tls", "embedded-phdrs"]
