#
# Copyright 2023, Colias Group, LLC
#
# SPDX-License-Identifier: BSD-2-Clause
#
#

[package]
name = "cargo-manifest-management"
version = "0.1.0"
authors = ["Nick Spinale <nick.spinale@coliasgroup.com>"]
edition = "2021"
license = "BSD-2-Clause"

[dependencies]
clap = { version = "4.4.6", features = [ "derive" ] }
either = "1.9"
serde = { version = "1.0", features = [ "derive" ] }
serde_json = "1.0"
similar = "2.3"
toml_edit = "0.20.4"

# exclude from top-level workspace
[workspace]
