[package]
name = "capdl-embed-spec"
version = "0.1.0"
authors = ["Nick Spinale <nick.spinale@coliasgroup.com>"]
edition = "2021"
license = "BSD-2-Clause"

[dependencies]
capdl-types = { path = "../types", features = ["alloc", "deflate"] }
hex = "*"
proc-macro2 = "1"
quote = "1"
serde = "*"
serde_json = "*"
syn = "1"
