[package]
name = "capdl-embedded-spec"
version = "0.1.0"
authors = ["Nick Spinale <nick.spinale@coliasgroup.com>"]
edition = "2021"
license = "BSD-2-Clause"

[features]
deflate = ["capdl-types/deflate"]

[dependencies]
capdl-types = { path = "../types" }

[build-dependencies]
capdl-embed-spec = { path = "../embed-spec" }
capdl-embedded-spec-serialized = { path = "./serialized" }
capdl-types = { path = "../types" }
serde_json = "*"
which = "*"
