[package]
name = "capdl-types"
version = "0.1.0"
authors = ["Nick Spinale <nick.spinale@coliasgroup.com>"]
edition = "2021"
license = "BSD-2-Clause"

[features]
alloc = ["miniz_oxide?/with-alloc"]
borrowed-indirect = []
deflate = ["dep:miniz_oxide"]
serde = ["alloc", "dep:serde"]
std = ["alloc", "serde_json"]

[dependencies]
capdl-types-derive = { path = "./derive" }
cfg-if = "1.0.0"
log = "0.4.17"
miniz_oxide = { version = "0.6.2", default-features = false, optional = true }
sel4 = { path = "../../sel4", default-features = false, optional = true }
serde_json = { version = "1.0.87", optional = true }

[dependencies.serde]
version = "1.0.147"
default-features = false
features = ["derive", "alloc"]
optional = true
