[package]
name = "docs-root"
version = "0.1.0"
authors = ["Nick Spinale <nick.spinale@coliasgroup.com>"]
edition = "2021"
license = "BSD-2-Clause"

[dependencies]
sel4 = { path = "../../sel4" }
sel4-platform-info = { path = "../../sel4/platform-info" }

[dependencies.sel4-full-root-task-runtime]
path = "../../runtime/sel4-full-root-task-runtime"
features = ["full"]
