#
# Copyright 2025, UNSW
#
# SPDX-License-Identifier: BSD-2-Clause
#

[package]
name = "sel4-meson-uart-driver"
version = "0.1.0"
authors = ["Alwin Joshy <joshyalwin@gmail.com>, Szymon Duchniewicz <s.duchniewicz@unsw.edu.au"]
edition = "2025"
license = "BSD-2-Clause"

[dependencies]
embedded-hal-nb = "1.0"
sel4-driver-interfaces = { path = "../../sel4-driver-interfaces" }
tock-registers = "0.9.0"
