[package]
name = "minimal-runtime-without-state"
version = "0.1.0"
authors = ["Nick Spinale <nick.spinale@coliasgroup.com>"]
edition = "2021"
license = "BSD-2-Clause"

[dependencies]
sel4 = { path = "../../sel4", default-features = false }
sel4-minimal-root-task-runtime = { path = "../../runtime/sel4-minimal-root-task-runtime", default-features = false, features = ["panic-handler"] }
